update blog preview image

--- a/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.Rmd
+++ b/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.Rmd
@@ -164,8 +164,15 @@ obsLevelData[, , "windLevel"] <- dat$wind
 
 ```
 
-![Swift photo (c) J Tanner 2022.
-<https://macaulaylibrary.org/asset/409111121>](images/swift.png)
+
+```{r swift, preview = TRUE, fig.cap="Swift (c) J Tanner 2022. <https://macaulaylibrary.org/asset/409111121>", echo = FALSE, out.width= "100%"}
+
+knitr::include_graphics("images/swift.png")
+
+```
+
+<!-- ![Swift photo (c) J Tanner 2022. -->
+<!-- <https://macaulaylibrary.org/asset/409111121>](images/swift.png) -->
 
 In this section, I showcase the use of nimbleEcology for implementing an
 occupancy model with simulated data.
